# Novelizer

./: .gitignore  CLAUDE.md  Cargo.toml  README.KR.md  README.md  index.html  package.json  pnpm-lock.yaml
crates/activitypub/: Cargo.toml
crates/activitypub/src/vocabulary/: object.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  schema.rs
crates/forgefed/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/routes/: vcs.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: lib.rs
frontend/: index.html  tsconfig.json
frontend/.storybook/: main.ts
frontend/components/layout/body/sidebar/: LeftSidebar.tsx  LeftSidebarContent.tsx
frontend/components/layout/footer/: StatusBar.tsx
frontend/components/layout/header/: LayoutButtons.tsx  Title.tsx
frontend/components/ui/: Breadcrumb.tsx  Button.tsx  Sidebar.tsx  Tabs.tsx  Toggle.tsx  ToggleGroup.tsx
frontend/components/ui/tree/draggable/: utilities.ts
frontend/stores/: useEditorStore.ts
frontend/stories/ui/: Breadcrumb.stories.tsx  Button.stories.tsx  Tree.stories.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  models.rs
src/components/: ProjectSelector.tsx
src/components/layout/body/editor/: AddBlockButton.tsx  Block.tsx  Editor.tsx
src/components/layout/body/sidebar/: LeftSidebar.tsx  LeftSidebarContent.tsx
src/components/layout/footer/: Panel.tsx
src/components/layout/header/: Header.tsx  Title.tsx
src/components/ui/: Breadcrumb.tsx  ContextMenu.tsx  DropdownMenu.tsx  Input.tsx  Popover.tsx  Slider.tsx  SliderInput.tsx  SortableTree.tsx  Tabs.tsx  Tree.tsx
src/components/ui/tree/: Tree.tsx
src/data/: mockFiles.ts
src/stores/: useEditorStore.ts  useProjectStore.ts
src/stories/ui/: ContextMenu.stories.tsx  DraggableTree.stories.tsx  Sidebar.stories.tsx  SortableTree.stories.tsx  Toggle.stories.tsx  ToggleGroup.stories.tsx  Tree.stories.tsx
src/types/rust/: bindings.ts
(+4 files in other folders)
